styling fix for accordian text alignment

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,6 +2,10 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
   margin: 10px 30px;
+}
+
+.MuiAccordionSummary-content {
+  align-items: center;
+  padding-left: 100px;
 }
